force-app/main/default/objects/Customer_Service__c/Customer_Service__c.object-meta.xml
<CustomObject>
    <description>To be utilized by Customer Support Representatives</description>
    <label>Customer Service</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Customer Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>