force-app/main/default/objects/Customer_Service__c/fields/Account_Owner1_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner1_ID__c</fullName>
    <formula>Account_Name__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>