force-app/main/default/objects/Customer_Service__c/fields/Amount_Approved_by_Blue_Tarp__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved_by_Blue_Tarp__c</fullName>
    <label>Amount Approved by Blue Tarp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>