force-app/main/default/objects/Customer_Service__c/fields/Amount_Approved_Delete__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved_Delete__c</fullName>
    <formula>VALUE(TEXT( Amount_Approved_by_Citi__c ))+ 
VALUE(TEXT( Amount_Approved_by_Blue_Tarp__c ))+ 
VALUE(TEXT( Amount_Approved_by_Recourse__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Approved_Delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>