force-app/main/default/objects/Customer_Service__c/fields/Amount_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Amount_Resolved__c</fullName>
    <inlineHelpText>Credit Specialist to indicate the amount resolved from the chargeback</inlineHelpText>
    <label>Amount Resolved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>