force-app/main/default/objects/Customer_Service__c/fields/Application_received_from_customer__c.field-meta.xml
<CustomField>
    <fullName>Application_received_from_customer__c</fullName>
    <label>Application received from customer</label>
    <type>DateTime</type>
</CustomField>