force-app/main/default/objects/Customer_Service__c/fields/Assigned_Credit_Specialist_2__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Credit_Specialist_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Credit Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Service2</relationshipName>
    <type>Lookup</type>
</CustomField>