force-app/main/default/objects/Customer_Service__c/fields/Augusta_Requesting_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>Augusta_Requesting_Consent_Form__c</fullName>
    <description>If Blue Tarp Consent Form Received = No; Augusta Requesting Consent form is a required field</description>
    <inlineHelpText>If Blue Tarp Consent Form Received = No; Augusta Requesting Consent form is a required field</inlineHelpText>
    <label>Augusta Requesting Consent Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>