force-app/main/default/objects/Customer_Service__c/fields/Bank_Trade_References__c.field-meta.xml
<CustomField>
    <fullName>Bank_Trade_References__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank &amp; Trade References</label>
    <type>Checkbox</type>
</CustomField>