force-app/main/default/objects/Customer_Service__c/fields/Blue_Tarp_Comments__c.field-meta.xml
<CustomField>
    <fullName>Blue_Tarp_Comments__c</fullName>
    <label>Blue Tarp Comments</label>
    <type>TextArea</type>
</CustomField>