force-app/main/default/objects/Customer_Service__c/fields/Chargeback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Amount__c</fullName>
    <inlineHelpText>Credit Specialist to enter the Amount of the Chargeback</inlineHelpText>
    <label>Chargeback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>