force-app/main/default/objects/Customer_Service__c/fields/Chargeback_Category__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Category__c</fullName>
    <label>Chargeback Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>BT Chargeback</fullName>
            </value>
            <value>
                <fullName>BT Reject</fullName>
            </value>
            <value>
                <fullName>Dispute Chargeback</fullName>
            </value>
            <value>
                <fullName>Premier Chargeback</fullName>
            </value>
            <value>
                <fullName>Recourse-CONT</fullName>
            </value>
            <value>
                <fullName>Recourse-GEN</fullName>
            </value>
            <value>
                <fullName>Recourse-MIL</fullName>
            </value>
            <value>
                <fullName>Retainage</fullName>
            </value>
            <value>
                <fullName>Small Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>