force-app/main/default/objects/Customer_Service__c/fields/Chargeback_Date__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Date__c</fullName>
    <inlineHelpText>Credit Specialist to enter the Date of the Chargeback</inlineHelpText>
    <label>Chargeback Date</label>
    <type>Date</type>
</CustomField>