force-app/main/default/objects/Customer_Service__c/fields/Chargeback_Type__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Type__c</fullName>
    <inlineHelpText>Credit Specialist to indicate the type of chargeback</inlineHelpText>
    <label>Chargeback Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recourse-Cont</fullName>
            </value>
            <value>
                <fullName>21-Damage Mdse</fullName>
            </value>
            <value>
                <fullName>22-Duplicate Sale</fullName>
            </value>
            <value>
                <fullName>23-Invoice Detail Needed</fullName>
            </value>
            <value>
                <fullName>24-Incorrect PO#</fullName>
            </value>
            <value>
                <fullName>25-Signature Request</fullName>
            </value>
            <value>
                <fullName>26-Did Not Receive Mdse</fullName>
            </value>
            <value>
                <fullName>27-POD</fullName>
            </value>
            <value>
                <fullName>28-Pricing</fullName>
            </value>
            <value>
                <fullName>29-Poor Service</fullName>
            </value>
            <value>
                <fullName>31-RMA</fullName>
            </value>
            <value>
                <fullName>32-Shipping &amp; Freight</fullName>
            </value>
            <value>
                <fullName>36-Unauthorized Sales</fullName>
            </value>
            <value>
                <fullName>403-Recourse Concession</fullName>
            </value>
            <value>
                <fullName>41-Credit Issued in Error</fullName>
            </value>
            <value>
                <fullName>50-Unauthorized Buyer</fullName>
            </value>
            <value>
                <fullName>51-Cancellation</fullName>
            </value>
            <value>
                <fullName>52-Bldr Charged in Error</fullName>
            </value>
            <value>
                <fullName>54-Sales Amount Exceeds Authorization Amount</fullName>
            </value>
            <value>
                <fullName>56-Small Balance</fullName>
            </value>
            <value>
                <fullName>58-Partial Shipment</fullName>
            </value>
            <value>
                <fullName>87-Sales Tax</fullName>
            </value>
            <value>
                <fullName>90-No Matching Auth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>