force-app/main/default/objects/Customer_Service__c/fields/Citi_s_Response__c.field-meta.xml
<CustomField>
    <fullName>Citi_s_Response__c</fullName>
    <label>Citi&#39;s Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
            <value>
                <fullName>Paperwork Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>