force-app/main/default/objects/Customer_Service__c/fields/Credit_Solutions_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Credit_Solutions_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the assigned Credit Specialist</description>
    <inlineHelpText>Assigned Credit Specialist working the Chargeback</inlineHelpText>
    <label>Credit Solutions Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Service</relationshipName>
    <type>Lookup</type>
</CustomField>