force-app/main/default/objects/Customer_Service__c/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <label>Customer Reference Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>