force-app/main/default/objects/Customer_Service__c/fields/Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Signature</label>
    <type>Checkbox</type>
</CustomField>