force-app/main/default/objects/Customer_Service__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <description>Date Chargeback was Resolved</description>
    <inlineHelpText>Date Chargeback was Resolved</inlineHelpText>
    <label>Date Resolved</label>
    <type>Date</type>
</CustomField>