force-app/main/default/objects/Customer_Service__c/fields/Delivery_Installation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Installation_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery/Installation Schedule</label>
    <type>Checkbox</type>
</CustomField>