force-app/main/default/objects/Customer_Service__c/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal Tax ID #</label>
    <type>Checkbox</type>
</CustomField>