force-app/main/default/objects/Customer_Service__c/fields/Final_Decline_Approval__c.field-meta.xml
<CustomField>
    <fullName>Final_Decline_Approval__c</fullName>
    <label>Final Decline / Approval</label>
    <type>DateTime</type>
</CustomField>