force-app/main/default/objects/Customer_Service__c/fields/If_no_reason_why__c.field-meta.xml
<CustomField>
    <fullName>If_no_reason_why__c</fullName>
    <inlineHelpText>If applicable, enter the reason why it was not sent to Blue Tarp</inlineHelpText>
    <label>If no, reason why</label>
    <type>TextArea</type>
</CustomField>