force-app/main/default/objects/Customer_Service__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Invoice # for the Chargeback</description>
    <inlineHelpText>Invoice # for the Chargeback</inlineHelpText>
    <label>Invoice #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>