force-app/main/default/objects/Customer_Service__c/fields/Last_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Sale_Amount__c</fullName>
    <label>Last Sale Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>