force-app/main/default/objects/Customer_Service__c/fields/Legal_Authorized_Signature__c.field-meta.xml
<CustomField>
    <fullName>Legal_Authorized_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal/Authorized Signature</label>
    <type>Checkbox</type>
</CustomField>