force-app/main/default/objects/Customer_Service__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <label>Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Credit</fullName>
            </value>
            <value>
                <fullName>Account Receivable</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Commercial One</fullName>
            </value>
            <value>
                <fullName>Commercial Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>