force-app/main/default/objects/Customer_Service__c/fields/Personal_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Guarantee</label>
    <type>Checkbox</type>
</CustomField>