force-app/main/default/objects/Customer_Service__c/fields/Potential_Annual_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Sales_Volume__c</fullName>
    <formula>TEXT(Account_Name__r.Potential_Annual_Sales_Volume__c)</formula>
    <label>Potential Annual Sales Volume</label>
    <type>Text</type>
</CustomField>