force-app/main/default/objects/Customer_Service__c/fields/Product_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Product_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Forecast</label>
    <type>Checkbox</type>
</CustomField>