force-app/main/default/objects/Customer_Service__c/fields/Recourse_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Comments__c</fullName>
    <label>Recourse Comments</label>
    <type>TextArea</type>
</CustomField>