force-app/main/default/objects/Customer_Service__c/fields/Recovery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Amount__c</fullName>
    <label>Recovery Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>