force-app/main/default/objects/Customer_Service__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use the look-up icon to enter the associates name making the request</description>
    <inlineHelpText>Use the look-up icon to enter the associates name making the request</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Service1</relationshipName>
    <type>Lookup</type>
</CustomField>