force-app/main/default/objects/Customer_Service__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carol A</fullName>
            </value>
            <value>
                <fullName>Ceildeth Xmair</fullName>
            </value>
            <value>
                <fullName>Chad Moody</fullName>
            </value>
            <value>
                <fullName>Christie D</fullName>
            </value>
            <value>
                <fullName>Gina R</fullName>
            </value>
            <value>
                <fullName>Kenyetta L</fullName>
            </value>
            <value>
                <fullName>Michelle Wiggins</fullName>
            </value>
            <value>
                <fullName>Monica G</fullName>
            </value>
            <value>
                <fullName>Rae Ann Ladd</fullName>
            </value>
            <value>
                <fullName>Sabina O</fullName>
            </value>
            <value>
                <fullName>Shantonette McKenizie</fullName>
            </value>
            <value>
                <fullName>Sheila S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>