force-app/main/default/objects/Customer_Service__c/fields/Response_Received_from_Recourse__c.field-meta.xml
<CustomField>
    <fullName>Response_Received_from_Recourse__c</fullName>
    <label>Response Received from Recourse</label>
    <type>DateTime</type>
</CustomField>