force-app/main/default/objects/Customer_Service__c/fields/Rider_Included__c.field-meta.xml
<CustomField>
    <fullName>Rider_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rider Included</label>
    <type>Checkbox</type>
</CustomField>