force-app/main/default/objects/Customer_Service__c/fields/SAP_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SAP_Invoice__c</fullName>
    <label>SAP Invoice #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>