force-app/main/default/objects/Customer_Service__c/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <label>SAP Order #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>