force-app/main/default/objects/Customer_Service__c/fields/SCOPES_ID__c.field-meta.xml
<CustomField>
    <fullName>SCOPES_ID__c</fullName>
    <formula>Account_Name__r.SCOPES_ID__c</formula>
    <label>SCOPES ID</label>
    <type>Text</type>
</CustomField>