force-app/main/default/objects/Customer_Service__c/fields/Sent_to_Citi__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Citi__c</fullName>
    <label>Sent to Citi</label>
    <type>DateTime</type>
</CustomField>