force-app/main/default/objects/Customer_Service__c/fields/Sent_to_Citi_Age__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Citi_Age__c</fullName>
    <description>Calculates the time Request was sent to Citi till now)</description>
    <formula>(NOW()-Sent_to_Citi__c)</formula>
    <label>Sent to Citi Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>