force-app/main/default/objects/Customer_Service__c/fields/Sent_to_Recourse_Age__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Recourse_Age__c</fullName>
    <formula>(NOW()- Sent_to_Recourse__c )</formula>
    <label>Sent to Recourse Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>