force-app/main/default/objects/Customer_Service__c/fields/Signatures__c.field-meta.xml
<CustomField>
    <fullName>Signatures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signatures</label>
    <type>Checkbox</type>
</CustomField>