force-app/main/default/objects/Customer_Service__c/fields/Time_for_Blue_Tarp_s_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_for_Blue_Tarp_s_Response__c</fullName>
    <formula>Response_Received_from_Blue_Tarp__c  -  Sent_to_Blue_Tarp__c</formula>
    <label>Time for Blue Tarp&#39;s Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>